--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Details.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Details.cshtml
@@ -13,7 +13,14 @@
             Cover
         </dt>
         <dd class = "col-sm-10">
-            <img src="/img/bookcover/@Model.Cover" style="max-width:250px;width:100%"/>
+            @if (Model.Cover != null)
+            {
+                <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Cover)" style="max-width:250px;width:100%" />
+            }
+            else
+            {
+                <img src="/img/bookcover/placeholder.jpg" style="max-width:250px;width:100%" />
+            }
         </dd>
         <dt class = "col-sm-2">
             Name
