--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Index.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Index.cshtml
@@ -6,7 +6,7 @@
         <h1>List of Book</h1>
     </div>
     <div class="col-6 text-right">
-        <a asp-controller="Book" asp-action="CreateUpdate" class="btn btn-primary">Create New Book</a>
+        <a asp-controller="Book" asp-action="Create" class="btn btn-primary">Create New Book</a>
     </div>
 </div>
 <form asp-controller="Book" asp-action="Index" method="get" class="mb-3">
@@ -32,13 +32,18 @@
         @foreach (var book in Model)
         {
             <tr>
-                <td><img src="@book.Cover" style="max-width:250px;width:100%" /></td>
+                <td>
+                    @if (book.Cover != null)
+                    {
+                        <img src="data:image/jpeg;base64,@Convert.ToBase64String(book.Cover)" style="max-width:250px;width:100%" />
+                    }
+                </td>
                 <td>@book.Name</td>
                 <td>@book.Description</td>
                 <td>@book.Price</td>
                 <td>
                     <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="btn btn-info">Details</a>
-                    <a asp-controller="Book" asp-action="CreateUpdate" asp-route-id="@book.Id" class="btn btn-warning">Edit</a>
+                    <a asp-controller="Book" asp-action="Update" asp-route-id="@book.Id" class="btn btn-warning">Edit</a>
                     <a asp-controller="Book" asp-action="Delete" asp-route-id="@book.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
