--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Update.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Update.cshtml
@@ -8,13 +8,14 @@
 
 </head>
 
-<h1>@(Model.Book.Id==0 ?"Create":"Update") Book</h1>
+<h1>Update Book</h1>
 <form  method="post" enctype="multipart/form-data">
   <input asp-for="Book.Id" hidden />
-  <input asp-for="Book.Cover" hidden/>
-  <div class="form-group">
-    <img src="@Model.Book.Cover" style="max-width:250px;width:100%"/>
-  </div>
+    @if(Model.Book.Cover != null){
+        <div class="form-group">
+            <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Book.Cover)" style="max-width:250px;width:100%" />
+        </div>
+    }
   <div class="form-group">
     <label asp-for="Book.Name">Title</label>
     <input asp-for="Book.Name" />
@@ -40,22 +41,17 @@
     </div>
 
     <label asp-for="Book.Cover"></label>
-    <input type="file" name="file" class="form-control">
+    <input type="file" name="image" class="form-control">
+    <label asp-for="Book.FileLocation"></label>
+    <input type="file" name="pdf" class="form-control">
   </div>
   <div class="btn group" role="group">
-            @if (Model.Book.Id == 0)
-            {
-                <button type="submit" class="btn btn-primary">Create</button>
-            }
-            else
-            {
-                <button type="submit" class="btn btn-primary">Update</button>
-            }
+     <button type="submit" class="btn btn-primary">Update</button>
 
-            <a asp-controller="Book" asp-action="Index" class="btn btn-primary">
-                Back to List
-            </a>
-        </div>
+     <a asp-controller="Book" asp-action="Index" class="btn btn-primary">
+        Back to List
+     </a>
+  </div>
 </form>
 
 
