Add featured books

--- a/StoreManagement/StoreManagement/Views/Shared/_Layout.cshtml
+++ b/StoreManagement/StoreManagement/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Manager" asp-controller="Author" asp-action="Index">Author</a>
                             </li>
+                            <li>
+                                <a class="nav-link text-dark" asp-area="Manager" asp-controller="Dashboard" asp-action="Index">Sales Dashboard</a>
+                            </li>
                         }
                         @if (User.IsInRole("Admin"))
                         {
