--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Update.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Update.cshtml
@@ -31,6 +31,10 @@
     <input asp-for="Book.Price" />
     <span asp-validation-for="Book.Price" class="text-danger"></span>
   </div>
+  <div class="form-group">
+        <label asp-for="Book.IsFeatured">Featured</label>
+        <input type="checkbox" asp-for="Book.IsFeatured" />
+  </div>
     <div class="form-group">
         <p>Author</p>
         <select id="Au_dropdown" class="form-control select2-multiple" asp-for="AuIDs" asp-items="Model.MyAuthors" multiple="multiple"></select>
