--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Author/CreateUpdate.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Author/CreateUpdate.cshtml
@@ -2,16 +2,16 @@
 <!-- <partial name="_Notification"/> -->
 
 <h1>@(Model.Id==0?"Create":"Update") Author</h1>
-<form  method="post" enctype="multipart/form-data">
+<form  method="post">
   <input asp-for="Id" hidden />
   <div class="form-group">
-    <label asp-for="Alias">Name</label>
-    <input asp-for="Alias" />
+    <label asp-for="Alias" class="control-label">Name</label>
+    <input asp-for="Alias" class="form-control" />
     <span asp-validation-for="Alias" class="text-danger"></span>
   </div>
   <div class="form-group">
-    <label asp-for="Info">Description</label>
-    <input asp-for="Info" />
+    <label asp-for="Info" class="control-label">Description</label>
+    <input asp-for="Info" class="form-control" />
     <span asp-validation-for="Info" class="text-danger"></span>
   </div>
   <div class="btn group" role="group">
@@ -29,6 +29,8 @@
             </a>
         </div>
 </form>
+
+
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial"/>
