--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Delete.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Delete.cshtml
@@ -6,7 +6,11 @@
   <input asp-for="Id" hidden />
   <input asp-for="Cover" hidden/>
   <div class="form-group">
-    <img src="@Model.Cover" style="max-width:250px;width:100%"/>
+        @if (Model.Cover != null)
+        {
+            <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Cover)
+            " style="max-width:250px;width:100%" />
+        }
   </div>
   <div class="form-group">
     <label asp-for="Name">Title</label>
