--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Index.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Index.cshtml
@@ -25,7 +25,7 @@
             <th>Name</th>
             <th>Description</th>
             <th>Price</th>
-            <th>Action</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -35,11 +35,11 @@
                 <td>
                     @if (book.Cover != null)
                     {
-                        <img src="data:image/jpeg;base64,@Convert.ToBase64String(book.Cover)" style="max-width:250px;width:100%" />
+                        <img src="data:image/jpeg;base64,@Convert.ToBase64String(book.Cover)" style="max-width:150px;width:100%" />
                     }
                 </td>
                 <td>@book.Name</td>
-                <td>@book.Description</td>
+                <td style="max-width: 450px; word-wrap: break-word; overflow: hidden; text-overflow: ellipsis;">@book.Description</td>
                 <td>@book.Price</td>
                 <td>
                     <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" class="btn btn-info">Details</a>
