--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Category/Index.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Category/Index.cshtml
@@ -1,31 +1,35 @@
 ﻿@model List<Category>
 
 
-<h1>List of Categories</h1>
-
-<p>
-    <a asp-controller="Category" asp-action="Create" class="btn btn-primary">Create new Category</a>
-</p>
-<table>
- <thead>
-     <tr>
-         <th>Name</th>
-         <th>Description</th>
-     </tr>
- </thead>
- <tbody>
-     @foreach(var category in Model)
-     {
-     <tr>
-         <td>@category.Name</td>
-         <td>@category.Description<td>
-         <td>
-			<div class="btn group" role="group">
-			    <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class="btn btn-primary">Edit</a>
-				<a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" class="btn btn-primary">Delete</a>
-			</div>
-		</td>
-      </tr>
-     }
- </tbody>
-</table>
+<div class="container mt-4 mb-4">
+    <div class="row">
+        <div class="col-md-6">
+            <h1 class="mb-3">List of Category</h1>
+        </div>
+        <div class="col-md-6 d-flex justify-content-md-end align-items-center">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">Create New Category</a>
+        </div>
+    </div>
+    <table class="table table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var category in Model)
+            {
+                <tr>
+                    <td>@category.Name</td>
+                    <td>@category.Description</td>
+                    <td>
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class="btn btn-warning btn-sm">Edit</a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger btn-sm">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
