--- a/StoreManagement/StoreManagement/Views/Shared/_Layout.cshtml
+++ b/StoreManagement/StoreManagement/Views/Shared/_Layout.cshtml
@@ -32,9 +32,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        
                         @if (User.IsInRole("Manager"))
                         {
                             <li class="nav-item">
@@ -46,15 +44,16 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Manager" asp-controller="Author" asp-action="Index">Author</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Manager" asp-controller="Category" asp-action="Index">Category</a>
+                            </li>
                             <li>
                                 <a class="nav-link text-dark" asp-area="Manager" asp-controller="Dashboard" asp-action="Index">Sales Dashboard</a>
                             </li>
                         }
                         @if (User.IsInRole("Admin"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                            </li>
+                            
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Admin" asp-controller="Role" asp-action="Index">Roles</a>
                             </li>
