--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Index.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Book/Index.cshtml
@@ -38,7 +38,7 @@
                         <img src="data:image/jpeg;base64,@Convert.ToBase64String(book.Cover)" style="max-width:150px;width:100%" />
                     }
                 </td>
-                <td>@book.Name</td>
+                <td style="max-width: 150px; word-wrap: break-word; overflow: hidden; text-overflow: ellipsis;">@book.Name</td>
                 <td style="max-width: 450px; word-wrap: break-word; overflow: hidden; text-overflow: ellipsis;">@book.Description</td>
                 <td>@book.Price</td>
                 <td>
