--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Author/Index.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Author/Index.cshtml
@@ -23,7 +23,7 @@
             {
                 <tr>
                     <td>@author.Alias</td>
-                    <td>@author.Info</td>
+                    <td style="max-width: 500px; word-wrap: break-word; overflow: hidden; text-overflow: ellipsis;">@author.Info</td>
                     <td>
                         <a asp-controller="Author" asp-action="CreateUpdate" asp-route-id="@author.Id" class="btn btn-warning btn-sm">Edit</a>
                         <a asp-controller="Author" asp-action="Delete" asp-route-id="@author.Id" class="btn btn-danger btn-sm">Delete</a>
