--- a/StoreManagement/StoreManagement/Areas/Manager/Views/Category/Delete.cshtml
+++ b/StoreManagement/StoreManagement/Areas/Manager/Views/Category/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Category
 <!-- <partial name="_Notification"/> -->
 
-<h1>Delete Cat</h1>
+<h1>Delete Category</h1>
 <form method="post">
     <input asp-for="Id" hidden />
     <div class="form-group">
